// Vitest Snapshot v1

exports[`using HEAD variables > when headEnabled property is set to \`false\`, behavior is same as the default 1`] = `
"
<script setup lang=\\"ts\\">
const title = \\"Hello World\\"
 const description = \\"testing is the path to true happiness\\"
 const excerpt = undefined
  defineExpose({ frontmatter: {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}, excerpt: undefined })
</script>"
`;

exports[`using HEAD variables > when the headEnabled property is set to \`true\`, all interaction with useHead is enabled 1`] = `
"
<script setup lang=\\"ts\\">
import { useHead } from \\"@vueuse/head\\"
  const head = {\\"title\\":\\"Hello World\\",\\"meta\\":[{\\"property\\":\\"og:title\\",\\"content\\":\\"Hello World\\"},{\\"property\\":\\"og:description\\",\\"content\\":\\"testing is the path to true happiness\\"},{\\"name\\":\\"description\\",\\"content\\":\\"testing is the path to true happiness\\"}]}
  useHead(head)
  const title = \\"Hello World\\"
 const description = \\"testing is the path to true happiness\\"
 const excerpt = undefined
 const meta = [{\\"property\\":\\"og:title\\",\\"content\\":\\"Hello World\\"},{\\"property\\":\\"og:description\\",\\"content\\":\\"testing is the path to true happiness\\"},{\\"name\\":\\"description\\",\\"content\\":\\"testing is the path to true happiness\\"}]
  defineExpose({ frontmatter: {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\",\\"meta\\":[{\\"property\\":\\"og:title\\",\\"content\\":\\"Hello World\\"},{\\"property\\":\\"og:description\\",\\"content\\":\\"testing is the path to true happiness\\"},{\\"name\\":\\"description\\",\\"content\\":\\"testing is the path to true happiness\\"}]}, excerpt: undefined })
</script>"
`;
